# minici

./: .gitignore  CHANGELOG.md  README.md  erebos-tester.yaml  minici.cabal  minici.yaml
src/: Command.hs  Config.hs  Config.hs-boot  Destination.hs  Eval.hs  Expr.hs  Expression.hs  FileUtils.c  FileUtils.hs  Job.hs  Main.hs  Output.hs  Repo.hs  Terminal.hs  Version.hs
src/Command/: Checkout.hs  Extract.hs  JobId.hs  Log.hs  Run.hs  Shell.hs  Subtree.hs
src/Job/: Types.hs
src/Version/: Git.hs
test/asset/artifact/: minici.yaml
test/asset/publish/: from_dependency.yaml  from_self.yaml
test/asset/repo/: checkout.yaml
test/asset/run/: cancel.yaml  dependencies.yaml  explicit.yaml  external.yaml  many_repos.yaml  norepo-basic.yaml  repo-basic.yaml  repo-basic2.yaml  rerun.yaml  single.yaml
test/asset/shell/: minici.yaml
test/script/: artifact.et  common.et  publish.et  repo.et  run.et  shell.et
