cabal-version:      3.0
name:               minici
version:            0.1.1
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Roman Smrž
maintainer:         roman.smrz@seznam.cz

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

executable minici
    main-is:          Main.hs
    ghc-options:      -Wall -threaded

    -- Modules included in this executable, other than Main.
    other-modules:      Config
                        Job
                        Paths_minici
                        Version
                        Version.Git

    -- LANGUAGE extensions used by modules in this package.
    other-extensions:    TemplateHaskell
    default-extensions:  ExistentialQuantification
                         FlexibleContexts
                         FlexibleInstances
                         GADTs
                         GeneralizedNewtypeDeriving
                         ImportQualifiedPost
                         LambdaCase
                         MultiParamTypeClasses
                         MultiWayIf
                         OverloadedStrings
                         ScopedTypeVariables
                         TupleSections
                         TypeApplications
    -- other-extensions:
    build-depends:    base              >=4.15 && <5
                    , bytestring        >=0.10 && <0.12
                    , containers        >=0.6 && <0.7
                    , directory >=1.3 && <1.4
                    , exceptions >=0.10 && <0.11
                    , filepath >=1.4 && <1.5
                    , HsYAML    >=0.2 && <0.3
                    , mtl >=2.2 && <2.3
                    , parser-combinators >=1.3 && <1.4
                    , process >=1.6 && <1.7
                    , stm >=2.5 && <2.6
                    , template-haskell  >=2.17 && <2.19
                    , text >=1.2 && <2.1
                    , th-compat         >=0.1 && <0.2
    hs-source-dirs:   src
    default-language: Haskell2010
