cabal-version:      3.0
name:               minici
version:            0.1.1
synopsis:           Minimalist CI framework to run checks on local machine
description:
    Runs defined jobs, for example to build and test a project, for each git
    commit in a given set and reports results. The jobs are configured in
    a simple YAML file and can produce artifacts to be used in other steps.
homepage:           https://erebosprotocol.net/minici

-- A URL where users can report bugs.
-- bug-reports:
license:            GPL-3.0-only
license-file:       LICENSE
author:             Roman Smrž
maintainer:         roman.smrz@seznam.cz

-- A copyright notice.
-- copyright:
-- category:
category:           Testing
extra-doc-files:
    CHANGELOG.md

flag ci
    description:    Options for CI testing
    default: False
    manual: True

executable minici
    main-is:          Main.hs

    ghc-options:
        -Wall
        -threaded
        -fdefer-typed-holes

    if flag(ci)
        ghc-options:
            -Werror
            -- sometimes needed for backward/forward compatibility:
            -Wno-error=unused-imports

    -- Modules included in this executable, other than Main.
    other-modules:
        Command
        Command.Run
        Config
        Job
        Paths_minici
        Version
        Version.Git

    default-extensions:
        DefaultSignatures
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        GADTs
        GeneralizedNewtypeDeriving
        ImportQualifiedPost
        LambdaCase
        MultiParamTypeClasses
        MultiWayIf
        OverloadedStrings
        ScopedTypeVariables
        TupleSections
        TypeApplications
        TypeFamilies

    other-extensions:
        TemplateHaskell

    build-depends:    base              >=4.15 && <5
                    , bytestring        >=0.10 && <0.12
                    , containers        >=0.6 && <0.7
                    , directory >=1.3 && <1.4
                    , exceptions >=0.10 && <0.11
                    , filepath >=1.4 && <1.5
                    , HsYAML    >=0.2 && <0.3
                    , mtl >=2.2 && <2.3
                    , parser-combinators >=1.3 && <1.4
                    , process >=1.6 && <1.7
                    , stm >=2.5 && <2.6
                    , template-haskell  >=2.17 && <2.19
                    , text >=1.2 && <2.1
                    , th-compat         >=0.1 && <0.2
    hs-source-dirs:   src
    default-language: Haskell2010
