cabal-version:      3.0
name:               minici
version:            0.1.8
synopsis:           Minimalist CI framework to run checks on local machine
description:
    Runs defined jobs, for example to build and test a project, for each git
    commit in a given set and reports results. The jobs are configured in
    a simple YAML file and can produce artifacts to be used in other steps.
homepage:           https://erebosprotocol.net/minici

-- A URL where users can report bugs.
-- bug-reports:
license:            GPL-3.0-only
license-file:       LICENSE
author:             Roman Smrž
maintainer:         roman.smrz@seznam.cz

-- A copyright notice.
-- copyright:
-- category:
category:           Testing
extra-doc-files:
    README.md
    CHANGELOG.md

flag ci
    description:    Options for CI testing
    default: False
    manual: True

source-repository head
    type:       git
    location:   https://code.erebosprotocol.net/minici

executable minici
    main-is:          Main.hs

    ghc-options:
        -Wall
        -threaded
        -fdefer-typed-holes

    if flag(ci)
        ghc-options:
            -Werror
            -- sometimes needed for backward/forward compatibility:
            -Wno-error=unused-imports

    other-modules:
        Command
        Command.Checkout
        Command.Extract
        Command.JobId
        Command.Log
        Command.Run
        Command.Shell
        Command.Subtree
        Config
        Destination
        Eval
        FileUtils
        Job
        Job.Types
        Output
        Paths_minici
        Repo
        Terminal
        Version
        Version.Git
    autogen-modules:
        Paths_minici

    c-sources:
        src/FileUtils.c

    default-extensions:
        DefaultSignatures
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        GADTs
        GeneralizedNewtypeDeriving
        ImportQualifiedPost
        LambdaCase
        MultiParamTypeClasses
        MultiWayIf
        OverloadedStrings
        RecordWildCards
        ScopedTypeVariables
        TupleSections
        TypeApplications
        TypeFamilies
        TypeOperators

    other-extensions:
        TemplateHaskell

    build-depends:
        ansi-terminal ^>= { 0.11, 1.0, 1.1 },
        base ^>= { 4.15, 4.16, 4.17, 4.18, 4.19, 4.20, 4.21 },
        bytestring ^>= { 0.10, 0.11, 0.12 },
        containers ^>= { 0.6, 0.7 },
        directory ^>= { 1.3 },
        exceptions ^>= { 0.10 },
        filepath ^>= { 1.4, 1.5 },
        Glob ^>= { 0.10.2 },
        hinotify ^>= { 0.4 },
        HsYAML ^>= { 0.2 },
        mtl ^>= { 2.2, 2.3 },
        parser-combinators ^>= { 1.3 },
        process ^>= { 1.6 },
        stm ^>= { 2.5 },
        template-haskell ^>= { 2.17, 2.18, 2.19, 2.20, 2.21, 2.22, 2.23 },
        temporary ^>= { 1.3 },
        text ^>= { 1.2, 2.0, 2.1 },
        th-compat ^>= { 0.1 },
        unix ^>= { 2.7.2, 2.8.4 },

    hs-source-dirs:   src
    default-language: Haskell2010
